# AndroidRunner

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
src/androidrunner/: cli.py
src/androidrunner.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/androidrunner/android/: adb.py  project.py  sdk.py
src/androidrunner/commands/: build.py  clean.py  config.py  detect.py  devices.py  doctor.py  emulator.py  info.py  init.py  install.py  launch.py  logs.py  release.py  run.py
src/androidrunner/core/: config.py  project.py  scanner.py
