[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "androidrunner"
version = "0.1.0"
description = "Universal Android CLI"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "typer>=0.12",
    "rich>=13"
]

[project.scripts]
adr = "androidrunner.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]